--- a/testing gspread.ipynb
+++ b/testing gspread.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "ebb058df",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,11 @@
     "\n",
     "import pandas as pd\n",
     "\n",
+    "from urllib.request import urlopen\n",
+    "\n",
     "from PIL import Image\n",
-    "import requests\n"
+    "import requests\n",
+    "from io import BytesIO\n"
    ]
   },
   {
@@ -44,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4e33c1b6",
+   "id": "e859ca51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fe2bd522",
+   "id": "e90d5fda",
    "metadata": {},
    "outputs": [
     {
@@ -208,20 +211,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "77fa84f1",
+   "execution_count": 24,
+   "id": "0fe9f23b",
    "metadata": {},
    "outputs": [
     {
      "ename": "UnidentifiedImageError",
-     "evalue": "cannot identify image file <_io.BytesIO object at 0x7faf58a6eef0>",
+     "evalue": "cannot identify image file <_io.BytesIO object at 0x7faf58d62470>",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-84e4825bcb3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mraw_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"What is your LinkedIn profile image?\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-24-1f51e8b25a65>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Image.open(response.raw)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murlopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   2966\u001b[0m         \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2967\u001b[0m     raise UnidentifiedImageError(\n\u001b[0;32m-> 2968\u001b[0;31m         \u001b[0;34m\"cannot identify image file %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2969\u001b[0m     )\n\u001b[1;32m   2970\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnidentifiedImageError\u001b[0m: cannot identify image file <_io.BytesIO object at 0x7faf58a6eef0>"
+      "\u001b[0;31mUnidentifiedImageError\u001b[0m: cannot identify image file <_io.BytesIO object at 0x7faf58d62470>"
      ]
     }
    ],
@@ -230,8 +233,12 @@
     "raw_data[\"What is your LinkedIn profile image?\"][0]\n",
     "\n",
     "url = raw_data[\"What is your LinkedIn profile image?\"][0]\n",
-    "response = requests.get(url)\n",
-    "Image.open(response.raw)\n"
+    "url='https://commons.wikimedia.org/wiki/File:A-Cat.jpg'\n",
+    "# response = requests.get(url)\n",
+    "# Image.open(response.raw)\n",
+    "\n",
+    "img = Image.open(urlopen(url))\n",
+    "img\n"
    ]
   },
   {
